--- a/blackjack-rl/blackjack-rl.ipynb
+++ b/blackjack-rl/blackjack-rl.ipynb
@@ -1038,6 +1038,8 @@
     "        self.sab = sab\n",
     "        \n",
     "        self.deck = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 10, 10] * 4\n",
+    "        self.temperature = 0\n",
+    "        self.\n",
     "\n",
     "    def seed(self, seed=None):\n",
     "        self.np_random, seed = seeding.np_random(seed)\n",
@@ -1085,7 +1087,7 @@
     "        return self._get_obs(), reward, done, {}\n",
     "    \n",
     "    def _get_obs(self):\n",
-    "        return (self.sum_hand(self.player), self.dealer[0], self.usable_ace(self.player))\n",
+    "        return (self.sum_hand(self.player), self.dealer[0], self.usable_ace(self.player), self.temperature)\n",
     "\n",
     "    def reset(self):\n",
     "        self.dealer = self.draw_hand(self.np_random)\n",
