--- a/tictactoe-rl/tictactoe_q_learning.ipynb
+++ b/tictactoe-rl/tictactoe_q_learning.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from tictactoe_env import TicTacToe\n",
     "import numpy as np\n",
+    "from tqdm.notebook import tqdm\n",
+    "from collections import defaultdict\n",
+    "from itertools import product\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -15,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +47,9 @@
     "    def __init__(self, env):\n",
     "        self.env = env\n",
     "\n",
-    "    def run_episode(self, player_x, player_o):\n",
+    "    def run_episode(self, player_x, player_o, return_history=False):\n",
     "        state, _, is_done, _ = self.env.reset()\n",
+    "        states_x, states_o = [], []\n",
     "        rewards_x, rewards_o = [], []\n",
     "        players = [player_x, player_o]\n",
     "        cur_player = 0\n",
@@ -45,58 +58,57 @@
     "            state, reward, is_done, _ = self.env.step(step)\n",
     "            if cur_player == 0:\n",
     "                rewards_x.append(reward)\n",
+    "                states_x.append(state)\n",
     "            else:\n",
     "                rewards_o.append(-reward)\n",
-    "            # rewards_x.append(reward)\n",
-    "            # rewards_o.append(-reward)\n",
+    "                states_o.append(state)\n",
     "            cur_player = (cur_player + 1) % 2\n",
     "        if (len(rewards_x) > len(rewards_o)):\n",
     "            if (rewards_x[-1] == 1):\n",
     "                rewards_o.append(-1)\n",
     "            else:\n",
     "                rewards_o.append(0)\n",
-    "        \n",
-    "        return rewards_x, rewards_o"
+    "        if (rewards_o[-1] == 1):\n",
+    "            rewards_x[-1] = -1\n",
+    "        if return_history:\n",
+    "            return (states_x, rewards_x), (states_o, rewards_o)\n",
+    "        return rewards_x[-1], rewards_o[-1]\n",
+    "\n",
+    "    def check_mean_reward(self, player_x, player_o, n_iter):\n",
+    "        rewards_x = []\n",
+    "        for _ in tqdm(range(n_iter)):\n",
+    "            reward_x, _ = self.run_episode(player_x, player_o)\n",
+    "            rewards_x.append(reward_x)\n",
+    "        return np.mean(rewards_x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = TicTacToe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "env = TicTacToe()\n",
     "game = TicTacToeGame(env)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0, 0, 0, 0, 0, 0, 1], [0, 0, 0, 0, 0, 0, -1])"
+       "(1, -1)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "game = TicTacToeGame(env)\n",
-    "\n",
-    "\n",
     "player_x = RandomPlayer()\n",
     "player_o = RandomPlayer()\n",
     "\n",
@@ -105,298 +117,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bcf59791cdf045d893670ff8e2e2cf78",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "(('111111111',\n",
-       "  array([[0, 0],\n",
-       "         [0, 1],\n",
-       "         [0, 2],\n",
-       "         [1, 0],\n",
-       "         [1, 1],\n",
-       "         [1, 2],\n",
-       "         [2, 0],\n",
-       "         [2, 1],\n",
-       "         [2, 2]], dtype=int64),\n",
-       "  1),\n",
-       " 0,\n",
-       " False,\n",
-       " {})"
+       "  0%|          | 0/10000 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 66,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.2974"
+      ]
+     },
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.reset()"
+    "game.check_mean_reward(player_x, player_o, n_iter=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "env.printBoard()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('211111111',\n",
-       "  array([[0, 1],\n",
-       "         [0, 2],\n",
-       "         [1, 0],\n",
-       "         [1, 1],\n",
-       "         [1, 2],\n",
-       "         [2, 0],\n",
-       "         [2, 1],\n",
-       "         [2, 2]], dtype=int64),\n",
-       "  -1),\n",
-       " 0,\n",
-       " False,\n",
-       " {})"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.step(np.array([0, 0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------\n",
-      "| x |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "env.printBoard()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('211111111',\n",
-       "  array([[0, 1],\n",
-       "         [0, 2],\n",
-       "         [1, 0],\n",
-       "         [1, 1],\n",
-       "         [1, 2],\n",
-       "         [2, 0],\n",
-       "         [2, 1],\n",
-       "         [2, 2]], dtype=int64),\n",
-       "  -1),\n",
-       " -10,\n",
-       " True,\n",
-       " {})"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.step(np.array([0, 0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0],\n",
-       "       [0, 1],\n",
-       "       [0, 2],\n",
-       "       [1, 0],\n",
-       "       [1, 1],\n",
-       "       [1, 2],\n",
-       "       [2, 0],\n",
-       "       [2, 1],\n",
-       "       [2, 2]], dtype=int64)"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.reset()[0][1][np.random.randint()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "env.printBoard()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(('211111111',\n",
-       "  array([[0, 1],\n",
-       "         [0, 2],\n",
-       "         [1, 0],\n",
-       "         [1, 1],\n",
-       "         [1, 2],\n",
-       "         [2, 0],\n",
-       "         [2, 1],\n",
-       "         [2, 2]], dtype=int64),\n",
-       "  -1),\n",
-       " -10,\n",
-       " True,\n",
-       " {})"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.step([0, 0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
-    "env"
+    "class QLearningPlayer:\n",
+    "    def __init__(self, eps, alpha, gamma, n_rows=3, n_cols=3):\n",
+    "        self.eps = eps\n",
+    "        self.alpha = alpha\n",
+    "        self.gamma = gamma\n",
+    "        self.q_table = defaultdict(lambda: np.zeros(n_rows * n_cols))\n",
+    "        self.actions = list(product(range(n_rows), range(n_cols)))\n",
+    "        self.set_training()\n",
+    "    \n",
+    "    def set_training(self):\n",
+    "        self.training = True\n",
+    "\n",
+    "    def set_evaluating(self):\n",
+    "        self.training = False\n",
+    "\n",
+    "    def update_q(self):\n",
+    "        pass\n",
+    "\n",
+    "    def strategy(self, state):\n",
+    "        state_hash = state[0]\n",
+    "        coin = np.random.rand()\n",
+    "        greedy_action = self.greedy_step(state_hash)\n",
+    "        random_action = self.random_step()\n",
+    "        if self.training:\n",
+    "            coin = np.random.rand() < self.eps\n",
+    "            if coin:\n",
+    "                action = random_action\n",
+    "            else:\n",
+    "                action = greedy_action\n",
+    "        else:\n",
+    "            action = greedy_action\n",
+    "        return action\n",
+    "    \n",
+    "    def greedy_step(self, state_hash):\n",
+    "        return self.actions[self.q_table[state_hash].argmax()]\n",
+    "    \n",
+    "    def random_step(self):\n",
+    "        return self.actions[np.random.randint(0, len(self.actions))]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qplayer = QLearningPlayer(1, 0, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb046ae06292475faae641f925a74ade",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "(('201111111',\n",
-       "  array([[0, 2],\n",
-       "         [1, 0],\n",
-       "         [1, 1],\n",
-       "         [1, 2],\n",
-       "         [2, 0],\n",
-       "         [2, 1],\n",
-       "         [2, 2]], dtype=int64),\n",
-       "  1),\n",
-       " 0,\n",
-       " False,\n",
-       " {})"
+       "  0%|          | 0/100000 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 6,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-4.63266"
+      ]
+     },
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.step([0, 1])"
+    "game.check_mean_reward(qplayer, qplayer, 100000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------\n",
-      "| x | o |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n",
-      "|   |   |   | \n",
-      "-------------\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(-10, 0)"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "env.printBoard()"
+    "game.run_episode(qplayer, qplayer)"
    ]
   },
   {
